로그인 관련 처리 수정, 다국어처리 코드 추가, 공지 삭제

--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -1,6 +1,16 @@
 lang-none=\uC5B8\uC5B4 \uC120\uD0DD
 lang-ko=\uD55C\uAD6D\uC5B4
 lang-en=\uC601\uC5B4
+
 hd-login=\uB85C\uADF8\uC778
+hd-logout=\uB85C\uADF8\uC544\uC6C3
 hd-projects=\uD504\uB85C\uC81D\uD2B8
 hd-admin=\uAD00\uB9AC
+
+sb-dashboard=\uB300\uC2DC\uBCF4\uB4DC
+sb-activity=\uC791\uC5C5 \uB0B4\uC5ED
+sb-task=\uC5C5\uBB34
+sb-gantt-chart=Gantt \uCC28\uD2B8
+sb-calendar=\uB2EC\uB825
+sb-risk=\uB9AC\uC2A4\uD06C
+sb-project-setting=\uD504\uB85C\uC81D\uD2B8 \uC138\uD305
