헤더, 사이드바 수정, 다국어 처리 코드 추가

--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -14,3 +14,21 @@ sb-gantt-chart=Gantt Chart
 sb-calendar=Calendar
 sb-risk=Risk
 sb-project-setting=Project Setting
+
+dash-info=Info
+dash-members=Members
+dash-issues=Issues
+dash-achievement-rate=Achievement Rate
+dash-achievement-safe=Safe(over 90%)
+dash-achievement-warning=Warning(over 70% under 90%)
+dash-achievement-danger=Danger(under 70%)
+dash-project-name=Project Name
+dash-project-manager=Project Manager
+dash-project-description=Description
+dash-project-members=Member Count
+dash-project-homepage=Homepage
+dash-chart-per-project=Task per Project
+dash-chart-per-person=Task per Person
+dash-chart-total=Total
+dash-chart-progress=Progress
+dash-chart-done=Done
