--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -14,3 +14,21 @@ sb-gantt-chart=Gantt \uCC28\uD2B8
 sb-calendar=\uB2EC\uB825
 sb-risk=\uB9AC\uC2A4\uD06C
 sb-project-setting=\uD504\uB85C\uC81D\uD2B8 \uC138\uD305
+
+dash-info=\uC815\uBCF4
+dash-members=\uAD6C\uC131\uC6D0
+dash-issues=\uC0B0\uCD9C\uBB3C
+dash-achievement-rate=\uB2EC\uC131\uB960 \uAE30\uC900
+dash-achievement-safe=\uC815\uC0C1 (90% \uC774\uC0C1)
+dash-achievement-warning=\uACBD\uACE0 (70% \uC774\uC0C1 90% \uBBF8\uB9CC)
+dash-achievement-danger=\uC704\uD5D8 (70% \uBBF8\uB9CC)
+dash-project-name=\uD504\uB85C\uC81D\uD2B8\uBA85
+dash-project-manager=\uD504\uB85C\uC81D\uD2B8 \uB9E4\uB2C8\uC800
+dash-project-description=\uD504\uB85C\uC81D\uD2B8 \uC124\uBA85
+dash-project-members=\uCC38\uC5EC \uC778\uC6D0 \uC218
+dash-project-homepage=\uD648\uD398\uC774\uC9C0
+dash-chart-per-project=\uD504\uB85C\uC81D\uD2B8 \uC5C5\uBB34 \uC0C1\uD0DC\uBCC4 \uD604\uD669
+dash-chart-per-person=\uAC1C\uC778 \uC5C5\uBB34 \uC0C1\uD0DC\uBCC4 \uD604\uD669
+dash-chart-total=\uC804\uCCB4
+dash-chart-progress=\uC9C4\uD589
+dash-chart-done=\uC644\uB8CC
