--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -32,3 +32,7 @@ dash-chart-per-person=Task per Person
 dash-chart-total=Total
 dash-chart-progress=Progress
 dash-chart-done=Done
+
+all=All
+task=Task
+risk=Risk
