--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -32,3 +32,7 @@ dash-chart-per-person=\uAC1C\uC778 \uC5C5\uBB34 \uC0C1\uD0DC\uBCC4 \uD604\uD669
 dash-chart-total=\uC804\uCCB4
 dash-chart-progress=\uC9C4\uD589
 dash-chart-done=\uC644\uB8CC
+
+all=\uBAA8\uB450
+task=\uC5C5\uBB34
+risk=\uB9AC\uC2A4\uD06C
