--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -36,3 +36,26 @@ dash-chart-done=\uC644\uB8CC
 all=\uBAA8\uB450
 task=\uC5C5\uBB34
 risk=\uB9AC\uC2A4\uD06C
+
+risk-insert=\uB4F1\uB85D
+risk-id=\uBC88\uD638
+risk-subject=\uC81C\uBAA9
+risk-projectname=\uD504\uB85C\uC81D\uD2B8\uBA85
+risk-status=\uC0C1\uD0DC
+risk-category=\uBC94\uC8FC
+risk-probability=\uC601\uD5A5\uB3C4
+risk-impact=\uBC1C\uC0DD\uB3C4
+risk-accountname=\uB2F4\uB2F9\uC790
+risk-startdate=\uC608\uC0C1\uC2DC\uC791\uC77C
+risk-enddate=\uC608\uC0C1\uC885\uB8CC\uC77C
+risk-updated=\uC218\uC815\uC77C
+risk-unlikely=\uBBF8\uC138
+risk-low=\uB0AE\uC74C
+risk-medium=\uC911\uAC04
+risk-high=\uB192\uC74C
+risk-expected=\uD655\uC2E4
+risk-negligible=\uBBF8\uC138
+risk-minor=\uC18C\uADDC\uBAA8
+risk-moderate=\uBCF4\uD1B5
+risk-significant=\uB192\uC74C
+risk-severe=\uC2EC\uAC01
