--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -36,3 +36,16 @@ dash-chart-done=Done
 all=All
 task=Task
 risk=Risk
+
+risk-insert=Insert
+risk-id=ID
+risk-subject=Subject
+risk-projectname=ProjectName
+risk-status=Status
+risk-category=Category
+risk-probability=Probability
+risk-impact=Impact
+risk-accountname=AccountName
+risk-startdate=ExpectStartDate
+risk-enddate=ExpectEndDate
+risk-updated=UpdatedDate
