--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -1,6 +1,6 @@
-lang-none=choice language
-lang-ko=korean
-lang-en=english
+lang-none=Choice Language
+lang-ko=Korean
+lang-en=English
 
 hd-login=Login
 hd-logout=Logout
@@ -15,6 +15,7 @@ sb-calendar=Calendar
 sb-risk=Risk
 sb-project-setting=Project Setting
 
+dash-project-select=Select Project
 dash-info=Info
 dash-members=Members
 dash-issues=Issues
@@ -27,11 +28,31 @@ dash-project-manager=Project Manager
 dash-project-description=Description
 dash-project-members=Member Count
 dash-project-homepage=Homepage
+dash-project-status=Project Status
+dash-project-member-count=Person
 dash-chart-per-project=Task per Project
 dash-chart-per-person=Task per Person
 dash-chart-total=Total
 dash-chart-progress=Progress
 dash-chart-done=Done
+dash-chart-done-ratio=Project Total Done Ratio
+dash-recent-risk=Recent Risks
+dash-recent-issue=Recent Issues
+dash-create-new-risk=Create New Risk
+dash-view-all-risk=View All Risks
+dash-view-all-issue=View All Issues
+dash-issue-id=ID
+dash-issue-subject=Subject
+dash-issue-author=Author
+dash-issue-due-date=Due Date
+dash-issue-completed-on=Completed On
+dash-member-id=ID
+dash-member-name=Name
+dash-member-auth=Auth
+dash-member-total=Total
+dash-member-incompleted=Incompleted
+dash-member-completed=Completed
+dash-member-done-ratio=Done Ratio
 
 all=All
 task=Task
