--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -15,6 +15,7 @@ sb-calendar=\uB2EC\uB825
 sb-risk=\uB9AC\uC2A4\uD06C
 sb-project-setting=\uD504\uB85C\uC81D\uD2B8 \uC138\uD305
 
+dash-project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
 dash-info=\uC815\uBCF4
 dash-members=\uAD6C\uC131\uC6D0
 dash-issues=\uC0B0\uCD9C\uBB3C
@@ -27,11 +28,31 @@ dash-project-manager=\uD504\uB85C\uC81D\uD2B8 \uB9E4\uB2C8\uC800
 dash-project-description=\uD504\uB85C\uC81D\uD2B8 \uC124\uBA85
 dash-project-members=\uCC38\uC5EC \uC778\uC6D0 \uC218
 dash-project-homepage=\uD648\uD398\uC774\uC9C0
+dash-project-status=\uD504\uB85C\uC81D\uD2B8 \uC0C1\uD0DC
+dash-project-member-count=\uBA85
 dash-chart-per-project=\uD504\uB85C\uC81D\uD2B8 \uC5C5\uBB34 \uC0C1\uD0DC\uBCC4 \uD604\uD669
 dash-chart-per-person=\uAC1C\uC778 \uC5C5\uBB34 \uC0C1\uD0DC\uBCC4 \uD604\uD669
 dash-chart-total=\uC804\uCCB4
 dash-chart-progress=\uC9C4\uD589
 dash-chart-done=\uC644\uB8CC
+dash-chart-done-ratio=\uD504\uB85C\uC81D\uD2B8 \uD1B5\uD569 \uC5C5\uBB34 \uC9C4\uD589\uB3C4
+dash-recent-risk=\uCD5C\uADFC \uB9AC\uC2A4\uD06C \uBAA9\uB85D
+dash-recent-issue=\uCD5C\uADFC \uC0B0\uCD9C\uBB35 \uBAA9\uB85D
+dash-create-new-risk=\uC0C8 \uB9AC\uC2A4\uD06C \uC0DD\uC131
+dash-view-all-risk=\uBAA8\uB4E0 \uB9AC\uC2A4\uD06C \uBCF4\uAE30
+dash-view-all-issue=\uBAA8\uB4E0 \uC0B0\uCD9C\uBB3C \uBCF4\uAE30
+dash-issue-id=\uBC88\uD638
+dash-issue-subject=\uC81C\uBAA9
+dash-issue-author=\uB2F4\uB2F9\uC790
+dash-issue-due-date=\uC644\uB8CC \uC608\uC815\uC77C
+dash-issue-completed-on=\uC644\uB8CC\uC77C
+dash-member-id=\uBC88\uD638
+dash-member-name=\uC774\uB984
+dash-member-auth=\uC5ED\uD560
+dash-member-total=\uC804\uCCB4
+dash-member-incompleted=\uC9C4\uD589
+dash-member-completed=\uC644\uB8CC
+dash-member-done-ratio=\uB2EC\uC169\uB960
 
 all=\uBAA8\uB450
 task=\uC5C5\uBB34
