--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -57,6 +57,16 @@ dash-member-done-ratio=\uB2EC\uC169\uB960
 all=\uBAA8\uB450
 task=\uC5C5\uBB34
 risk=\uB9AC\uC2A4\uD06C
+activity=\uC791\uC5C5\uB0B4\uC5ED
+project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
+d_type_select=\uC791\uC5C5\uC720\uD615 \uC120\uD0DD
+ac_type=\uC791\uC5C5\uC720\uD615
+ac_list=\uC791\uC5C5\uB0B4\uC5ED \uBAA9\uB85D
+ac_no=\uC791\uC5C5\uBC88\uD638
+ac_content=\uB0B4\uC6A9
+ac_writer=\uC791\uC131\uC790
+ac_date=\uC791\uC5C5\uC77C\uC790
+ac_setting=\uC801\uC6A9
 
 risk-insert=\uB4F1\uB85D
 risk-id=\uBC88\uD638
