다국어 처리

--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -54,11 +54,11 @@ dash-member-incompleted=Incompleted
 dash-member-completed=Completed
 dash-member-done-ratio=Done Ratio
 
-all=All
-task=Task
-risk=Risk
+ac_all=All
+ac_task=Task
+ac_risk=Risk
 activity=Activity
-project-select=Project Select
+ac_project-select=Project Select
 d_type_select=Type Select
 ac_type=Activity Type
 ac_list=Activity List
@@ -80,3 +80,44 @@ risk-accountname=AccountName
 risk-startdate=ExpectStartDate
 risk-enddate=ExpectEndDate
 risk-updated=UpdatedDate
+
+ps_search=Search
+ps_name=Project Name
+ps_description=Description
+ps_identifier=Identifier
+ps_project_setting=Project Setting
+ps_homepage=Homepage
+ps_setting=Setting
+ps_delete=Delete
+ps_cancel=Return
+
+u_pass_change=Change Password
+u_id=ID
+u_date=Registration Date
+u_login=Last Login Time
+user_task='s Task
+u_progress=Progress
+u_done=Done
+a_all=All
+user_tasks=User's Task
+u_task_list=Task List
+u_id=ID
+u_project=Project Name
+u_type=Task Type
+u_status=Task Status
+u_content=Content
+u_writer=Writer
+u_start_date=Start 
+u_completed_date=Completed 
+u_newfunction=New Function
+u_defect=Defect
+u_support=Support
+u_new=New
+u_completed=Completed
+u_progresss=Progress
+
+account_login=Login
+account_id=ID
+account_pass=Password
+account_searchpass=Find Password
+account_insert=Sign Up
