--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -54,11 +54,11 @@ dash-member-incompleted=\uC9C4\uD589
 dash-member-completed=\uC644\uB8CC
 dash-member-done-ratio=\uB2EC\uC169\uB960
 
-all=\uBAA8\uB450
-task=\uC5C5\uBB34
-risk=\uB9AC\uC2A4\uD06C
+ac_all=\uBAA8\uB450
+ac_task=\uC5C5\uBB34
+ac_risk=\uB9AC\uC2A4\uD06C
 activity=\uC791\uC5C5\uB0B4\uC5ED
-project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
+ac_project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
 d_type_select=\uC791\uC5C5\uC720\uD615 \uC120\uD0DD
 ac_type=\uC791\uC5C5\uC720\uD615
 ac_list=\uC791\uC5C5\uB0B4\uC5ED \uBAA9\uB85D
@@ -90,3 +90,44 @@ risk-minor=\uC18C\uADDC\uBAA8
 risk-moderate=\uBCF4\uD1B5
 risk-significant=\uB192\uC74C
 risk-severe=\uC2EC\uAC01
+
+ps_search=\uAC80\uC0C9
+ps_name=\uD504\uB85C\uC81D\uD2B8\uBA85
+ps_description=\uC124\uBA85
+ps_identifier=\uC2DD\uBCC4\uC790
+ps_project_setting=\uD504\uB85C\uC81D\uD2B8 \uC124\uC815
+ps_homepage=\uD648\uD398\uC774\uC9C0
+ps_setting=\uC124\uC815
+ps_delete=\uC0AD\uC81C
+ps_cancel=\uB3CC\uC544\uAC00\uAE30
+
+u_pass_change=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD\uD558\uAE30
+u_id=\uC544\uC774\uB514
+u_date=\uB4F1\uB85D\uC77C
+u_login=\uB9C8\uC9C0\uB9C9 \uB85C\uADF8\uC778
+user_task=\uB2D8\uC758 \uC5C5\uBB34
+u_progress=\uC9C4\uD589\uC911
+u_done=\uC644\uB8CC\uB428
+a_all=\uD569\uACC4
+user_tasks=\uD560\uB2F9\uB41C \uC5C5\uBB34
+u_task_list=\uC791\uC5C5\uB0B4\uC5ED \uBAA9\uB85D
+u_id=\uBC88\uD638
+u_project=\uD504\uB85C\uC81D\uD2B8\uBA85
+u_type=\uC720\uD615
+u_status=\uC0C1\uD0DC
+u_content=\uB0B4\uC6A9
+u_writer=\uB2F4\uB2F9\uC790
+u_start_date=\uC2DC\uC791\uB0A0\uC9DC
+u_completed_date=\uC644\uB8CC\uB0A0\uC9DC 
+u_newfunction=\uC0C8\uAE30\uB2A5
+u_defect=\uACB0\uD568
+u_support=\uC9C0\uC6D0
+u_new=\uC2E0\uADDC
+u_completed=\uC644\uB8CC
+u_progresss=\uC9C4\uD589
+
+account_login=\uB85C\uADF8\uC778
+account_id=\uC544\uC774\uB514 \uC785\uB825
+account_pass=\uBE44\uBC00\uBC88\uD638
+account_searchpass=\uBE44\uBC00\uBC88\uD638 \uCC3E\uAE30
+account_insert=\uC0C8\uB85C \uB4F1\uB85D\uD558\uAE30
