risk 유효성 수정

--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -68,6 +68,7 @@ ac_writer=\uC791\uC131\uC790
 ac_date=\uC791\uC5C5\uC77C\uC790
 ac_setting=\uC801\uC6A9
 
+risk-risk=\uB9AC\uC2A4\uD06C
 risk-insert=\uB4F1\uB85D
 risk-id=\uBC88\uD638
 risk-subject=\uC81C\uBAA9
