--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -126,9 +126,31 @@ u_support=\uC9C0\uC6D0
 u_new=\uC2E0\uADDC
 u_completed=\uC644\uB8CC
 u_progresss=\uC9C4\uD589
+u_solve=\uD574\uACB0
+u_opinion=\uC758\uACAC
+u_reject=\uAC70\uC808
 
 account_login=\uB85C\uADF8\uC778
 account_id=\uC544\uC774\uB514 \uC785\uB825
 account_pass=\uBE44\uBC00\uBC88\uD638
 account_searchpass=\uBE44\uBC00\uBC88\uD638 \uCC3E\uAE30
 account_insert=\uC0C8\uB85C \uB4F1\uB85D\uD558\uAE30
+
+account_duplication=\uC911\uBCF5\uD655\uC778 
+account_name=\uC774\uB984 \uC785\uB825
+account_enroll=\uB4F1\uB85D
+account_check=\uD655\uC778
+account_email=\uC774\uBA54\uC77C \uC785\uB825
+account_member_registration=\uD68C\uC6D0 \uB4F1\uB85D
+acount_change_pass=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
+account_new_pass=\uC0C8 \uBE44\uBC00\uBC88\uD638 \uC785\uB825
+
+p_search=\uAC80\uC0C9
+p_new-project=\uC0C8 \uD504\uB85C\uC81D\uD2B8 \uB9CC\uB4E4\uAE30
+p_checking-project=\uD504\uB85C\uC81D\uD2B8 \uD655\uC778\uD558\uAE30
+p_name=\uD504\uB85C\uC81D\uD2B8\uBA85
+p_description=\uC124\uBA85
+p_identifier=\uC2DD\uBCC4\uC790
+p_homepage=\uD648\uD398\uC774\uC9C0
+p_new=\uB9CC\uB4E4\uAE30
+p_cancel=\uCDE8\uC18C
