--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -67,6 +67,8 @@ ac_content=\uB0B4\uC6A9
 ac_writer=\uC791\uC131\uC790
 ac_date=\uC791\uC5C5\uC77C\uC790
 ac_setting=\uC801\uC6A9
+ac_search=\uAC80\uC0C9
+ac_project=\uD504\uB85C\uC81D\uD2B8
 
 risk-risk=\uB9AC\uC2A4\uD06C
 risk-insert=\uB4F1\uB85D
