--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -135,7 +135,7 @@ account_check=Check
 account_email=Email
 account_member_registration=Member Registration
 account_change_pass=Change Password
-account_new_pass=New Pssword
+account_new_pass=New Password
 
 p_search=Search
 p_new-project=New project
