--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -144,7 +144,7 @@ account_enroll=\uB4F1\uB85D
 account_check=\uD655\uC778
 account_email=\uC774\uBA54\uC77C \uC785\uB825
 account_member_registration=\uD68C\uC6D0 \uB4F1\uB85D
-acount_change_pass=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
+account_change_pass=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
 account_new_pass=\uC0C8 \uBE44\uBC00\uBC88\uD638 \uC785\uB825
 
 p_search=\uAC80\uC0C9
