--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -95,7 +95,7 @@ ps_delete=Delete
 ps_cancel=Return
 
 u_pass_change=Change Password
-u_id=ID
+u_user_id=ID
 u_date=Registration Date
 u_login=Last Login Time
 user_task='s Task
