--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -105,7 +105,7 @@ ps_delete=\uC0AD\uC81C
 ps_cancel=\uB3CC\uC544\uAC00\uAE30
 
 u_pass_change=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD\uD558\uAE30
-u_id=\uC544\uC774\uB514
+u_user_id=\uC544\uC774\uB514
 u_date=\uB4F1\uB85D\uC77C
 u_login=\uB9C8\uC9C0\uB9C9 \uB85C\uADF8\uC778
 user_task=\uB2D8\uC758 \uC5C5\uBB34
