대시보드 오타 수정

--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -37,7 +37,7 @@ dash-chart-progress=\uC9C4\uD589
 dash-chart-done=\uC644\uB8CC
 dash-chart-done-ratio=\uD504\uB85C\uC81D\uD2B8 \uD1B5\uD569 \uC5C5\uBB34 \uC9C4\uD589\uB3C4
 dash-recent-risk=\uCD5C\uADFC \uB9AC\uC2A4\uD06C \uBAA9\uB85D
-dash-recent-issue=\uCD5C\uADFC \uC0B0\uCD9C\uBB35 \uBAA9\uB85D
+dash-recent-issue=\uCD5C\uADFC \uC0B0\uCD9C\uBB3C \uBAA9\uB85D
 dash-create-new-risk=\uC0C8 \uB9AC\uC2A4\uD06C \uC0DD\uC131
 dash-view-all-risk=\uBAA8\uB4E0 \uB9AC\uC2A4\uD06C \uBCF4\uAE30
 dash-view-all-issue=\uBAA8\uB4E0 \uC0B0\uCD9C\uBB3C \uBCF4\uAE30
