--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -146,6 +146,7 @@ account_email=\uC774\uBA54\uC77C \uC785\uB825
 account_member_registration=\uD68C\uC6D0 \uB4F1\uB85D
 account_change_pass=\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
 account_new_pass=\uC0C8 \uBE44\uBC00\uBC88\uD638 \uC785\uB825
+account_searchid=\uC544\uC774\uB514 \uCC3E\uAE30
 
 p_search=\uAC80\uC0C9
 p_new-project=\uC0C8 \uD504\uB85C\uC81D\uD2B8 \uB9CC\uB4E4\uAE30
