--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -8,7 +8,7 @@ hd-projects=\uD504\uB85C\uC81D\uD2B8
 hd-admin=\uAD00\uB9AC
 
 sb-dashboard=\uB300\uC2DC\uBCF4\uB4DC
-sb-activity=\uC791\uC5C5 \uB0B4\uC5ED
+sb-activity=\uCC98\uB9AC \uB0B4\uC5ED
 sb-task=\uC5C5\uBB34
 sb-gantt-chart=Gantt \uCC28\uD2B8
 sb-calendar=\uB2EC\uB825
@@ -57,11 +57,11 @@ dash-member-done-ratio=\uB2EC\uC169\uB960
 ac_all=\uBAA8\uB450
 ac_task=\uC5C5\uBB34
 ac_risk=\uB9AC\uC2A4\uD06C
-activity=\uC791\uC5C5\uB0B4\uC5ED
+activity=\uCC98\uB9AC \uB0B4\uC5ED
 ac_project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
 d_type_select=\uC791\uC5C5\uC720\uD615 \uC120\uD0DD
-ac_type=\uC791\uC5C5\uC720\uD615
-ac_list=\uC791\uC5C5\uB0B4\uC5ED \uBAA9\uB85D
+ac_type=\uB0B4\uC5ED\uC720\uD615
+ac_list=\uCC98\uB9AC\uB0B4\uC5ED \uBAA9\uB85D
 ac_no=\uC791\uC5C5\uBC88\uD638
 ac_content=\uB0B4\uC6A9
 ac_writer=\uC791\uC131\uC790
