--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -71,6 +71,9 @@ ac_search=\uAC80\uC0C9
 ac_project=\uD504\uB85C\uC81D\uD2B8
 
 risk-risk=\uB9AC\uC2A4\uD06C
+risk-list=\uB9AC\uC2A4\uD06C \uBAA9\uB85D
+risk-selectProject=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
+risk-selectProjectSearch =\uAC80\uC0C9
 risk-insert=\uB4F1\uB85D
 risk-id=\uBC88\uD638
 risk-subject=\uC81C\uBAA9
