--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -134,6 +134,7 @@ u_progresss=\uC9C4\uD589
 u_solve=\uD574\uACB0
 u_opinion=\uC758\uACAC
 u_reject=\uAC70\uC808
+u_change_info=\uD68C\uC6D0\uC815\uBCF4 \uC218\uC815
 
 account_login=\uB85C\uADF8\uC778
 account_id=\uC544\uC774\uB514 \uC785\uB825
