--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -69,6 +69,7 @@ ac_date=Updated Date
 ac_setting=Search
 ac_search=Search
 ac_project=Project
+ac_responsibility=Responsibility
 
 risk-risk=Risk
 risk-list=Risk List
