--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -69,6 +69,7 @@ ac_date=\uC791\uC5C5\uC77C\uC790
 ac_setting=\uAC80\uC0C9
 ac_search=\uAC80\uC0C9
 ac_project=\uD504\uB85C\uC81D\uD2B8
+ac_responsibility=\uB2F4\uB2F9\uC790
 
 risk-risk=\uB9AC\uC2A4\uD06C
 risk-list=\uB9AC\uC2A4\uD06C \uBAA9\uB85D
