--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -87,16 +87,16 @@ risk-accountname=\uB2F4\uB2F9\uC790
 risk-startdate=\uC608\uC0C1\uC2DC\uC791\uC77C
 risk-enddate=\uC608\uC0C1\uC885\uB8CC\uC77C
 risk-updated=\uC218\uC815\uC77C
-risk-unlikely=\uBBF8\uC138
+risk-unlikely=\uBBF8\uC138 
 risk-low=\uB0AE\uC74C
-risk-medium=\uC911\uAC04
+risk-medium=\uBCF4\uD1B5
 risk-high=\uB192\uC74C
 risk-expected=\uD655\uC2E4
 risk-negligible=\uBBF8\uC138
-risk-minor=\uC18C\uADDC\uBAA8
+risk-minor=\uB0AE\uC74C
 risk-moderate=\uBCF4\uD1B5
-risk-significant=\uB192\uC74C
-risk-severe=\uC2EC\uAC01
+risk-significant=\uC911\uC694
+risk-severe=\uCE58\uBA85\uC801
 
 ps_search=\uAC80\uC0C9
 ps_name=\uD504\uB85C\uC81D\uD2B8\uBA85
