다국어 / 사이드바 / 결재페이지 기본틀

--- a/src/resource/properties/msg_ko.properties
+++ b/src/resource/properties/msg_ko.properties
@@ -14,6 +14,7 @@ sb-gantt-chart=Gantt \uCC28\uD2B8
 sb-calendar=\uB2EC\uB825
 sb-risk=\uB9AC\uC2A4\uD06C
 sb-project-setting=\uD504\uB85C\uC81D\uD2B8 \uC138\uD305
+sb-approval=\uACB0\uC7AC
 
 dash-project-select=\uD504\uB85C\uC81D\uD2B8 \uC120\uD0DD
 dash-info=\uC815\uBCF4
