다국어파일

--- a/src/resource/properties/msg_en.properties
+++ b/src/resource/properties/msg_en.properties
@@ -95,7 +95,7 @@ ps_description=Description
 ps_identifier=Identifier
 ps_project_setting=Project Setting
 ps_homepage=Homepage
-ps_setting=Setting
+ps_setting=Update
 ps_delete=Delete
 ps_cancel=Return
 
